--- a/resource/view/console/index/index.html
+++ b/resource/view/console/index/index.html
@@ -2,11 +2,11 @@
 <html lang="zh-Hans">
 <head>
     <meta charset="utf-8">
-    <title>Welcome</title>
+    <title>Console</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sentsin/layui@v2.6.6/dist/css/layui.css">
     <script src="https://cdn.jsdelivr.net/gh/sentsin/layui@v2.6.6/dist/layui.js"></script>
 </head>
 <body>
-welcome
+Console
 </body>
 </html>
